@@ -359,6 +359,9 @@ Unreleased changes (1.0-dev)
 
 134. NUTCH-247 - Robot parser to restrict (kubes, siren)
 
+135. NUTCH-698 - CrawlDb is corrupted after a few crawl cycles (dogacan
+     via siren)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
